-Fixed BG Resize covering the container when screen resizing

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,9 @@
   align-items: center;
   background-image: url("./Assets/bg.jpg");
   background-size: 100%;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .TodosContainer {
